# EcologiaQT

./: .gitignore  CMakeLists.txt  Ecologia
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Ecologia_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Ecologia_autogen/MOKAWL564K/: moc_CMetodichka.cpp  moc_CMetodichka.cpp.d
Ecologia_autogen/VKQJLIFWUA/: moc_CFirstPractice.cpp  moc_CFirstPractice.cpp.d
Ecologia_autogen/WAYUIA5GRM/: moc_CMainWindow.cpp  moc_CMainWindow.cpp.d
Variant/: Variants.json
src/: Makefile  main.cpp
src/App/: api.hpp
src/UI/: CMainWindow.cpp  CMainWindow.h
src/UI/First/: First.cpp  First.hpp
src/UI/FirstPractice/: CFirstPractice.cpp  CFirstPractice.hpp
src/UI/Metodichka/: CMetodichka.cpp  CMetodichka.hpp  Metodichka.cpp  Metodichka.hpp
src/UI/Second/: Second.cpp  Second.hpp
